<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
		<Button
			android:id="@+id/afficherCatalogue"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="14dp"
			android:text="@string/consulterCatalogue" />
	
		<Button
			android:id="@+id/ajouterProduit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ajouterProduit" />
	
		<Button
			android:id="@+id/modifierProduit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/modifierProduit" />
	
		<Button
			android:id="@+id/supprimerProduit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/supprimerProduit" />
	
		<Button
			android:id="@+id/ajouterCategorie"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ajouterCategorie" />
	
		<Button
			android:id="@+id/supprimerCategorie"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/supprimerCategorie" />
		
		<Button
			android:id="@+id/ajouterClient"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ajouterClient" />
	
	</LinearLayout>
</ScrollView>