<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textNomSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textNomSite" />

        <EditText
            android:id="@+id/nomSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textNomSite"
            android:hint="@string/nomSite" />

        <CheckBox
            android:id="@+id/isShoppingCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nomSite"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/isShoppingCart" />

        <CheckBox
            android:id="@+id/isCustomerNotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/isShoppingCart"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/isCustomerNotice" />

        <CheckBox
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/isCustomerNotice"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/order" />

        <CheckBox
            android:id="@+id/productSorting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/productSorting" />

        <CheckBox
            android:id="@+id/categorySorting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/productSorting"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/categorySorting" />

        <CheckBox
            android:id="@+id/productSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/categorySorting"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/productSearch" />

        <CheckBox
            android:id="@+id/categorySearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/productSearch"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/categorySearch" />

        <Button
            android:id="@+id/colorChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/categorySearch"
            android:layout_centerHorizontal="true"
            android:onClick="getColor"
            android:text="@string/colorChange" />

        <Button
            android:id="@+id/btnValider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/colorChange"
            android:layout_centerHorizontal="true"
            android:text="@string/btnValider" />

        <TextView
            android:id="@+id/msgErreur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnValider"
            android:text="@string/msgErreur" />
    </RelativeLayout>

</ScrollView>