<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
         <TextView
	        android:id="@+id/titleSupClient"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/titleSupClient" />
         
         <EditText 
			android:id="@+id/rechClient"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:hint="@string/nomClient" />
	    
	    <TextView
			android:id="@+id/msgErreur"
		    android:text="@string/msgErreur"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
         
         <EditText 
			android:id="@+id/prenomClient"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:hint="@string/prenomClient" />
     
	    <Button
	        android:id="@+id/btnSupprimer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnSupprimer" />
        
    </LinearLayout>
    

</ScrollView>
