<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
	        android:id="@+id/titleSupCategorie"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/titleSupCategorie" />
	    
	    <EditText 
			android:id="@+id/rechCatego"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:hint="@string/nomCategorie" />
	    
	    <TextView
			android:id="@+id/msgErreur"
		    android:text="@string/msgErreur"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
     
	    <Button
	        android:id="@+id/btnSupprimer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnSupprimer" />   
    </LinearLayout>
    

</ScrollView>
