<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textNomSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textNomSite" />

        <EditText
            android:id="@+id/nomSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textNomSite"
            android:hint="@string/nomSite" />

        <TextView
            android:id="@+id/msgErreur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nomSite"
            android:text="@string/msgErreur" />

        <Button
            android:id="@+id/btnValider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/msgErreur"
            android:layout_centerHorizontal="true"
            android:text="@string/btnValider" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/btnValider"
            android:onClick="getColor"
            android:text="Changer la couleur du fond" />
    </RelativeLayout>

</ScrollView>